Modified CSS for separate buttons. Issue with overlapping divs for clicking.

--- a/style.css
+++ b/style.css
@@ -2,49 +2,49 @@ body {
     background-color: DimGrey;
 }
 
-#game-circle {
-    border-radius: 100%;
-    background-color: black;
-    width: 500px;
-    height: 500px;
-}
-
 #circle {
     position: relative;
     background-color: white;
-    width: 500px;
-    height: 500px;
-    border-radius: 100%;
+    width: 400px;
+    height: 400px;
     margin: auto;
 }
 
 .all-buttons {
     position: absolute;
-    left: 250px;
-    right: 250px;
     width: 0px;
     height: 0px;
-    border-radius: 50%;
+    border-radius: 100%;
     border-left: 200px solid transparent;
     border-right: 200px solid transparent;
+    border-bottom: 200px solid transparent;
+    pointer-events: none;
 }
 
-#green {    
+#green {
+    left: -0px;
+    top: 0px;
     border-top: 200px solid darkgreen;
     transform: rotate(-45deg);
 }
 
 #red {
+    right: -0px;
+    top: 0px;
     border-top: 200px solid darkred;
     transform: rotate(45deg);
 }
 
 #yellow {
+    left: -0px;
+    bottom: 0px;
     border-top: 200px solid rgb(173, 173, 0);
     transform: rotate(-135deg);
 }
 
 #blue {
+    right: -0px;
+    bottom: 0px;
     border-top: 200px solid darkblue;
     transform: rotate(135deg);
 }
@@ -54,12 +54,14 @@ body {
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    border: solid black;
-    margin: auto;
+
+    position: absolute;
+    top: 75px;
+    left: 75px;
     
-    background-color: lightslategray;
-    width: 300px;
-    height: 300px;
+    background-color: white;
+    width: 250px;
+    height: 250px;
     border-radius: 100%;
 }
 
